--- a/client/src/StyleSheet/Login.scss
+++ b/client/src/StyleSheet/Login.scss
@@ -1,6 +1,6 @@
 .login{
     width: 100%;
-    height: 86.8vh;
+    height: 86.7vh;
     font-size: 16px;
     margin: 0;
     padding: 0;
@@ -12,18 +12,64 @@
     background-position: right bottom;
     background-size: 50%;
     .login-form{
-        background-color: white;
         width: 300px;
         border-radius: 8px;
         position: absolute;
         top: 50%;
         left: 50%;
         transform: translate(-50%, -50%);
+        img{
+            width: 100px;
+            margin: 0 auto;
+            display: block;
+        }
+        h1{
+            font-family: Lato;
+            font-style: normal;
+            font-weight: 700;
+            font-size: 28px;
+            line-height: 30px;
+            text-align: center;
+            color: #da924e;
+        }
+        ul{
+            max-width: 200px;
+            display: flex;
+            position: relative;
+            justify-content: space-between;
+            align-items: center;
+            margin: auto;
+            li{
+                font-size: 12px;
+                color: #006747;
+            }
+            .child-two::before{
+                content: '';
+                width: 4px;
+                height: 4px;
+                position: absolute;
+                background-color: #006747;
+                left: 30%;
+                top: 8px;
+                border-radius: 2px;
+            }
+            .child-three::before{
+                content: '';
+                width: 4px;
+                height: 4px;
+                position: absolute;
+                background-color: #006747;
+                left: 78%;
+                top: 8px;
+                border-radius: 2px;
+            }  
+        }
         input{
             width: 100%;
             border: none;
             outline: none;
             font-size: 14px;
+            color: #111;
             padding: 4px 14px;
             background-color: #F5F8F9;
             border: 1px solid transparent;
@@ -39,14 +85,21 @@
             font-size: 13p;
         }
         .login-form-container{
+            background-color: white;
+            border-radius: 8px;
             p{
                 margin: 0;
                 font-size: 13px;
             }
             header{
-                border-bottom: 1px solid #000;
+                box-shadow: 0 0 13px #ece0c8;
             }
         }
     }
     
+}
+@media screen and ((max-width: 767px)) {
+    .login{
+        background-size: 100%;
+    }
 }
