--- a/client/src/StyleSheet/Authentication.scss
+++ b/client/src/StyleSheet/Authentication.scss
@@ -140,9 +140,10 @@
         margin-top: 25px ;
         .form-card{
             input{
-                border: 1px solid #ddd;
+                border: 1px solid #CCCCCC;
                 outline: none;
                 padding: 5px 8px;
+                color: #CCCCCC;
                 border-radius: 4px;
                 font-size: 14px;
             }
