--- a/client/src/StyleSheet/Navbar.scss
+++ b/client/src/StyleSheet/Navbar.scss
@@ -38,4 +38,12 @@
             border-bottom: 2px solid black;
         }
     }
+    .nav-dropdown{
+        // display: none;
+        width: 100%;
+        background-color: #21A75C;
+        position: absolute;
+        top: 100%;
+        left: 0;
+    }
 }
